[package]
name = "xl"
version = "0.1.7"
edition = "2018"
license = "MIT"
description = "A package to let you process *big* Excel files very quickly"
repository = "https://github.com/xlprotips/xl/"

[dependencies]
quick-xml = "0.22.0"
chrono = "0.4"
log = "*"
[dependencies.zip]
version = "0.6.2"
default-features = false
features = ["deflate"]

[lib]
name = "xl"
path = "src/lib.rs"

[[bin]]
name = "xlcat"
path = "src/main.rs"
